[package]
name = "splat"
version = "0.1.0"
edition = "2021"

default-run = "splat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["glam024"] }
ply-rs = "0.1.3"

[profile.release]
debug = true
