[package]
name = "splat"
version = "0.1.0"
edition = "2021"

default-run = "splat"


[dependencies]
euc = {version="*", git="https://github.com/zesterer/euc", rev="290e14c"}
minifb = "0.25.0"
nalgebra = { version = "0.32.3", features = ["glam024"] }
nalgebra-glm = "0.18.0"
ply-rs = "0.1.3"

[profile.release]
debug = true
# lto = true
